--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,11 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 44px "Comic Sans MS", Helvetica, Arial, sans-serif;
+  background-color: "magenta"
+}
+
+p{
+	color: "pink"
 }
 
 a {
