pimpage du site

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Bienvenue sur notre <%= title %>, ce site vous est fourni par Oli, Edi et Vinsan</p>
+    <p>Bienvenue sur notre <%= title %>, ce site vous est fourni par Oli, Edi, Gabriel et Vinsan</p>
   </body>
 </html>
